--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -134,6 +135,66 @@ body {
     display: flex;
     align-items: center;
     padding: 0 10%;
+}
+
+.about h1 {
+    text-align: center;
+    font-size: 48px;
+    font-weight: 700;
+    color: #081b29;
+    line-height: 1.2;
+}
+
+.about .about-info {
+    text-align: center;
+    font-size: 16px;
+    margin: 20px 0 40px;
+    color: #081b29;
+}
+
+.about h3 {
+    text-align: center;
+    font-size: 38px;
+    color: #081b29;
+    margin-bottom: 20px;
+}
+
+.about .card-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+}
+
+.about .educ-card {
+    align-items: center;
+    border: 1px solid hsla(0, 0%, 0%, 0.75);
+    border-radius: 5px;
+    min-width: 250px;
+}
+
+.about .educ-card .title {
+    text-align: center;
+    font-size: 22px;
+    background: transparent;
+    border-bottom: 1px solid hsla(0, 0%, 0%, 0.5);
+    border-radius: 5px;
+    font-weight: bold;
+    color: #00abf0;
+    padding: 10px 0;
+}
+
+.about .educ-info {
+    padding: 20px 10px;
+    text-align: center;
+    font-size: 18px;
+    color: #081b29;
+}
+
+.about .educ-year {
+    padding-bottom: 20px;
+    text-align: center;
+    font-size: 18px;
+    color: #081b29;
 }
 
 .projects{
