--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,11 @@ body {
     display: flex;
     align-items: center;
     padding: 0 10%;
+    gap: 200px;
+}
+.home img {
+    width: 100%;
+    height: 300px;
 }
 
 .content {
